@startuml
'https://plantuml.com/class-diagram
class Estadisticas
class Menu

enum Rareza {
    COMUN
    RARO
    EPICO
    LEGENDARIO
}

class Cristal {
    - Rareza rareza
    - Menu menu
    - Estadisticas estadisticas
    ---
    + Cristal()
    + Cristal(rareza : Rareza)
    + Cristal(rareza : const Rareza&, exito : const bool&)
    + bool operator==(rareza : Rareza)
    + Rareza obtener_rareza()
    + size_t obtener_fuerza()
    + size_t obtener_defensa()
    + size_t obtener_velocidad()
    + string convertir_rareza_a_string()
    + size_t obtener_poder()
    + void mostrar()
    + int obtener_porcentaje_exito()
    + static ostream& operator<<(os : ostream&, cristal : const Cristal&)
    - Estadisticas inicializar_estadisticas()
}

' Relaciones
Cristal --> Menu : "usa"
Cristal --> Estadisticas : "usa"
Cristal --> Rareza : "usa"
@enduml
